# LogLine

./: DEPLOYMENT.md  Dockerfile  README.md  cypress.config.ts  render.yaml  tsconfig.json
backend/: .env  .env.sample  Dockerfile  Procfile  README.md  deploy-to-render.sh  render.yaml  requirements.txt
backend/logline/: README.md  pyproject.toml
backend/logline/opa/: policy.rego
backend/opa/: policy.rego  policy_test.rego
backend/tests/: conftest.py  test_00_health_and_auth.py  test_01_actions_and_gateway.py  test_01_websocket_actions.py  test_02_opa_permissions.py  test_02_services.py  test_03_gateway_form_request_e2e.py  test_03_query_and_timeline.py  test_04_render_adaptativo.py  test_04_websockets.py  test_05_workflows.py  test_06_acionamento.py  test_06_render_adaptativo.py  test_07_consequences.py  test_imports.py
cypress/e2e/: actions.cy.ts  admin.cy.ts  auth.cy.ts  dashboard.cy.ts  gateway.cy.ts  webhooks.cy.ts
cypress/support/: commands.ts  e2e.ts
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: LOGEVENT_DATA_CONTRACT.md  README.md  TESTES_OBRIGATORIOS_LOGLINE_V2.md  WEBSOCKET_MESSAGES.md
frontend/: .babelrc  .env  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts  windsurf_deployment.yaml
frontend/public/: index.html  manifest.json
scripts/: README.md  create_indexes.py  deploy_to_render.sh  devtools.py  generate_schemas.py  seed_data.py  seed_db.py  seed_user.py  smoke_test.py  smoke_test.sh  trigger-netlify-deploy.sh  validate_contracts.py
tests/: test_boot.py
(+115 files in other folders)
